Changed Master branch to Prod. Created Dev branch.

--- a/src/main/resources/templates/bread-form.html
+++ b/src/main/resources/templates/bread-form.html
@@ -11,8 +11,8 @@
     <div id="ingredients">
         <!-- Initial ingredient inputs -->
         <div class="ingredient">
-            <label>Ingredient Name: <input type="text" name="ingredientNames[]"></label>
-            <label>Weight (grams): <input type="number" name="ingredientWeights[]"></label>
+            <label>Ingredient Name: <input type="text" name="ingredientNames"></label>
+            <label>Weight (grams): <input type="number" name="ingredientWeights"></label>
         </div>
     </div>
     <button type="button" id="addIngredient">Add Ingredient</button><br/>
